--- a/event.html
+++ b/event.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <title>Find Your Photo</title>
+  <title>BNRG PHOTOBOOTH</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./css/style.css" />
 </head>
@@ -12,7 +12,7 @@
     <section id="welcomeSection">
       <h1 id="eventName">Loading event...</h1>
       <p class="welcome-text">
-        Selamat datang di photobooth!<br/>
+        Selamat datang di BNRG photobooth!<br/>
         Di halaman ini kamu bisa menemukan fotomu hanya dengan scan wajah.
       </p>
       <button id="welcomeStartBtn">Mulai Scan Wajah</button>
