--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container center">
-    <h1>NINETIES Photobooth</h1>
+    <h1>BNRG Photobooth</h1>
     <p>Scan QR yang ada di dekat photobooth untuk membuka halaman event &amp; mulai mencari fotomu dengan scan wajah.</p>
     <p class="hint">
       URL QR biasanya berbentuk:<br>
